--- a/scss/app.scss
+++ b/scss/app.scss
@@ -161,6 +161,11 @@ $xxlarge-range: (120.063em, 99999999em);
             }
         }
         // LOGO
+        ul.title-area li h1{
+          text-align: left;
+          margin-left: 1rem;
+          font-size: 1.5rem;
+        }
         ul.title-area img {
             margin: -2px 0 0;
             width: 145px;
@@ -233,7 +238,7 @@ $xxlarge-range: (120.063em, 99999999em);
   position: relative;
   margin: 0;
   width: 100%;
-  height: 600px;
+  height: 300px;
   background: linear-gradient(to bottom, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0.5) 59%, rgba(0, 0, 0, 0.5) 100%), url("/images/constr.jpg") no-repeat center center;
   background-size: cover;
   img{
@@ -253,6 +258,9 @@ $xxlarge-range: (120.063em, 99999999em);
       margin: auto;
       font-size: 1.5rem;
     }
+  }
+  @media #{$large-up}{
+    height: 600px;
   }
 }
 
@@ -309,7 +317,7 @@ section.white-info{
   width: 100%;
   background-color: $white;
   position: relative;
-  height: 600px;
+  min-height: 600px;
   padding-top: 2rem;
   h1{
     font-size: 1.5rem;
@@ -324,6 +332,10 @@ section.white-info{
     height: 40%;
     width: 100%;
     background-color: $lp-gray;
+    display: none;
+    @media #{$large-up}{
+      display: block;
+    }    
   }
 }
 
@@ -489,14 +501,22 @@ section#contact{
   @include grid-row();
   padding-top: 2rem;
   .contact-form{
-    @include grid-column($columns:6, $center:true, $last-column:true);
+    @include grid-column($columns:8, $center:true, $last-column:true);
     text-align: center;
+    @media #{$large-up}{
+      display: block;
+      @include grid-column($columns:6, $center:true, $last-column:true);
+    }
   }
 }
 
 #lp-info-contain{
   @include grid-row();
   #lp-info{
-    @include grid-column($columns:6, $center:true, $last-column:true);
+    @include grid-column($columns:8, $center:true, $last-column:true);
+    @media #{$large-up}{
+      display: block;
+      @include grid-column($columns:6, $center:true, $last-column:true);
+    }
   }
 }
