--- a/app.css
+++ b/app.css
@@ -8531,29 +8531,30 @@ th.hide-for-touch {
           transform: translateY(-50%); }
   /* line 276, stdin */
   .overlay-content h1 {
-    color: #fff;
+    color: #FFFFFF;
     font-weight: bold;
     text-align: center; }
 
 /* line 286, stdin */
 h1 {
   text-align: center;
-  text-transform: uppercase; }
+  text-transform: uppercase;
+  color: #FFFFFF; }
 
-/* line 291, stdin */
+/* line 292, stdin */
 p {
   text-align: center; }
 
-/* line 295, stdin */
+/* line 296, stdin */
 section.brown-info {
   margin: 0;
   width: 100%;
   background-color: #563f2d; }
-  /* line 299, stdin */
+  /* line 300, stdin */
   section.brown-info h1, section.brown-info p {
     color: #FFFFFF; }
 
-/* line 304, stdin */
+/* line 305, stdin */
 .home-info {
   margin: 0 auto;
   max-width: 62.5rem;
@@ -8565,18 +8566,18 @@ section.brown-info {
   /* line 240, /Volumes/LaCie2/dev/logan-patrone/bower_components/foundation/scss/foundation/components/_global.scss */
   .home-info:after {
     clear: both; }
-  /* line 306, stdin */
+  /* line 307, stdin */
   .home-info p {
     margin-top: 2rem;
     margin-bottom: 2rem; }
-  /* line 310, stdin */
+  /* line 311, stdin */
   .home-info #home-content {
     padding-left: 0.9375rem;
     padding-right: 0.9375rem;
     width: 100%;
     float: left; }
     @media only screen and (min-width: 64.063em) {
-      /* line 310, stdin */
+      /* line 311, stdin */
       .home-info #home-content {
         display: block;
         padding-left: 0.9375rem;
@@ -8587,7 +8588,7 @@ section.brown-info {
         margin-right: auto;
         float: none; } }
 
-/* line 319, stdin */
+/* line 320, stdin */
 section.white-info {
   margin: 0;
   width: 100%;
@@ -8595,13 +8596,13 @@ section.white-info {
   position: relative;
   min-height: 600px;
   padding-top: 2rem; }
-  /* line 326, stdin */
+  /* line 327, stdin */
   section.white-info h1 {
     font-size: 1.5rem; }
-  /* line 329, stdin */
+  /* line 330, stdin */
   section.white-info h1, section.white-info p {
     color: #222222; }
-  /* line 332, stdin */
+  /* line 333, stdin */
   section.white-info .gray-block {
     position: absolute;
     top: 60%;
@@ -8611,11 +8612,11 @@ section.white-info {
     background-color: #a0a8a0;
     display: none; }
     @media only screen and (min-width: 64.063em) {
-      /* line 332, stdin */
+      /* line 333, stdin */
       section.white-info .gray-block {
         display: block; } }
 
-/* line 346, stdin */
+/* line 347, stdin */
 #att-info {
   margin: 0 auto;
   max-width: 62.5rem;
@@ -8628,14 +8629,14 @@ section.white-info {
   #att-info:after {
     clear: both; }
 
-/* line 350, stdin */
+/* line 351, stdin */
 #att-info-inner {
   padding-left: 0.9375rem;
   padding-right: 0.9375rem;
   width: 100%;
   float: left; }
   @media only screen and (min-width: 64.063em) {
-    /* line 350, stdin */
+    /* line 351, stdin */
     #att-info-inner {
       display: block;
       padding-left: 0.9375rem;
@@ -8646,7 +8647,7 @@ section.white-info {
       margin-right: auto;
       float: none; } }
 
-/* line 358, stdin */
+/* line 359, stdin */
 #info-blocks {
   margin: 0 auto;
   max-width: 62.5rem;
@@ -8660,7 +8661,7 @@ section.white-info {
   #info-blocks:after {
     clear: both; }
 
-/* line 363, stdin */
+/* line 364, stdin */
 .info-block {
   padding-left: 0.9375rem;
   padding-right: 0.9375rem;
@@ -8669,13 +8670,13 @@ section.white-info {
   text-align: center;
   background: #FFFFFF; }
   @media only screen and (min-width: 64.063em) {
-    /* line 363, stdin */
+    /* line 364, stdin */
     .info-block {
       padding-left: 0.9375rem;
       padding-right: 0.9375rem;
       width: 33.33333%;
       float: left; } }
-  /* line 370, stdin */
+  /* line 371, stdin */
   .info-block .inner {
     position: relative;
     background-color: #FFFFFF;
@@ -8685,29 +8686,29 @@ section.white-info {
     border-radius: 10px;
     -webkit-transition: height .5s ease-in-out;
             transition: height .5s ease-in-out; }
-    /* line 378, stdin */
+    /* line 379, stdin */
     .info-block .inner:hover {
       height: 350px; }
-      /* line 380, stdin */
+      /* line 381, stdin */
       .info-block .inner:hover .showme {
         visibility: visible;
         opacity: 1;
         -webkit-transition: visibility 0s, opacity .5s linear;
                 transition: visibility 0s, opacity .5s linear; }
 
-/* line 389, stdin */
+/* line 390, stdin */
 .showme {
   visibility: hidden;
   opacity: 0;
   -webkit-transition: visibility 0s, opacity .5s linear;
           transition: visibility 0s, opacity .5s linear; }
 
-/* line 395, stdin */
+/* line 396, stdin */
 #practice {
   background: url("/images/wood.jpg");
   background-size: cover; }
 
-/* line 400, stdin */
+/* line 401, stdin */
 #practice-contain {
   margin: 0 auto;
   max-width: 62.5rem;
@@ -8721,7 +8722,7 @@ section.white-info {
   /* line 240, /Volumes/LaCie2/dev/logan-patrone/bower_components/foundation/scss/foundation/components/_global.scss */
   #practice-contain:after {
     clear: both; }
-  /* line 404, stdin */
+  /* line 405, stdin */
   #practice-contain #description {
     padding-left: 0.9375rem;
     padding-right: 0.9375rem;
@@ -8729,32 +8730,32 @@ section.white-info {
     float: left;
     padding: 2rem;
     background: #FFFFFF; }
-    /* line 408, stdin */
+    /* line 409, stdin */
     #practice-contain #description h1, #practice-contain #description h2, #practice-contain #description h3, #practice-contain #description h4 {
       color: #222222; }
-    /* line 411, stdin */
+    /* line 412, stdin */
     #practice-contain #description p {
       color: #222222;
       text-align: left; }
-    /* line 415, stdin */
+    /* line 416, stdin */
     #practice-contain #description ul {
       color: #a0a8a0;
       list-style: none; }
     @media only screen and (min-width: 64.063em) {
-      /* line 404, stdin */
+      /* line 405, stdin */
       #practice-contain #description {
         padding-left: 0.9375rem;
         padding-right: 0.9375rem;
         width: 58.33333%;
         float: left;
         padding: 2rem; } }
-  /* line 424, stdin */
+  /* line 425, stdin */
   #practice-contain #pretty {
     display: none;
     background: url("/images/image4.jpg");
     background-size: cover; }
     @media only screen and (min-width: 64.063em) {
-      /* line 424, stdin */
+      /* line 425, stdin */
       #practice-contain #pretty {
         display: block;
         padding-left: 0.9375rem;
@@ -8765,12 +8766,12 @@ section.white-info {
 /*
    FOOTER SECTION
    ========================================================================== */
-/* line 440, stdin */
+/* line 441, stdin */
 input[type=text], textarea {
   color: #a0a8a0;
   border-radius: 10px; }
 
-/* line 445, stdin */
+/* line 446, stdin */
 input::-webkit-input-placeholder {
   color: #a0a8a0; }
 input::-moz-placeholder {
@@ -8780,7 +8781,7 @@ input:-ms-input-placeholder {
 input::placeholder {
   color: #a0a8a0; }
 
-/* line 449, stdin */
+/* line 450, stdin */
 textarea::-webkit-input-placeholder {
   color: #a0a8a0; }
 textarea::-moz-placeholder {
@@ -8790,11 +8791,11 @@ textarea:-ms-input-placeholder {
 textarea::placeholder {
   color: #a0a8a0; }
 
-/* line 453, stdin */
+/* line 454, stdin */
 textarea {
   min-height: 10rem; }
 
-/* line 457, stdin */
+/* line 458, stdin */
 button#submit-button {
   padding: 0;
   margin: 0;
@@ -8803,25 +8804,25 @@ button#submit-button {
   background-color: #a0a8a0;
   border-radius: 50%;
   font-size: 1.5rem; }
-  /* line 465, stdin */
+  /* line 466, stdin */
   button#submit-button:hover {
     background-color: #768076; }
 
-/* line 470, stdin */
+/* line 471, stdin */
 .footer-section {
   background: #563f2d;
   min-height: 100px; }
-  /* line 473, stdin */
+  /* line 474, stdin */
   .footer-section p {
     color: #a0a8a0;
     margin-top: 2rem; }
-  /* line 477, stdin */
+  /* line 478, stdin */
   .footer-section h1 {
     color: #a0a8a0;
     font-size: 1.5rem;
     margin-bottom: 2rem; }
 
-/* line 484, stdin */
+/* line 485, stdin */
 section#contact {
   margin: 0;
   max-width: 62.5rem;
@@ -8837,7 +8838,7 @@ section#contact {
   section#contact:after {
     clear: both; }
 
-/* line 491, stdin */
+/* line 492, stdin */
 #map-contain {
   padding-left: 0.9375rem;
   padding-right: 0.9375rem;
@@ -8849,7 +8850,7 @@ section#contact {
   width: 100%;
   height: 25rem; }
 
-/* line 500, stdin */
+/* line 501, stdin */
 #map-contain iframe {
   position: absolute;
   top: 0;
@@ -8857,7 +8858,7 @@ section#contact {
   width: 100% !important;
   height: 100% !important; }
 
-/* line 508, stdin */
+/* line 509, stdin */
 #contact-contain {
   margin: 0 auto;
   max-width: 62.5rem;
@@ -8870,7 +8871,7 @@ section#contact {
   /* line 240, /Volumes/LaCie2/dev/logan-patrone/bower_components/foundation/scss/foundation/components/_global.scss */
   #contact-contain:after {
     clear: both; }
-  /* line 511, stdin */
+  /* line 512, stdin */
   #contact-contain .contact-form {
     padding-left: 0.9375rem;
     padding-right: 0.9375rem;
@@ -8881,7 +8882,7 @@ section#contact {
     float: none;
     text-align: center; }
     @media only screen and (min-width: 64.063em) {
-      /* line 511, stdin */
+      /* line 512, stdin */
       #contact-contain .contact-form {
         display: block;
         padding-left: 0.9375rem;
@@ -8892,7 +8893,7 @@ section#contact {
         margin-right: auto;
         float: none; } }
 
-/* line 521, stdin */
+/* line 522, stdin */
 #lp-info-contain {
   margin: 0 auto;
   max-width: 62.5rem;
@@ -8904,7 +8905,7 @@ section#contact {
   /* line 240, /Volumes/LaCie2/dev/logan-patrone/bower_components/foundation/scss/foundation/components/_global.scss */
   #lp-info-contain:after {
     clear: both; }
-  /* line 523, stdin */
+  /* line 524, stdin */
   #lp-info-contain #lp-info {
     padding-left: 0.9375rem;
     padding-right: 0.9375rem;
@@ -8914,7 +8915,7 @@ section#contact {
     margin-right: auto;
     float: none; }
     @media only screen and (min-width: 64.063em) {
-      /* line 523, stdin */
+      /* line 524, stdin */
       #lp-info-contain #lp-info {
         display: block;
         padding-left: 0.9375rem;
