Form spree modal pop-up with url base…

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -241,6 +241,7 @@ $xxlarge-range: (120.063em, 99999999em);
   height: 300px;
   background: linear-gradient(to bottom, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0.5) 59%, rgba(0, 0, 0, 0.5) 100%), url("/images/constr.jpg") no-repeat center center;
   background-size: cover;
+  background-position: center bottom;
   img{
     position: absolute;
     width: 20rem;
