--- a/app.css
+++ b/app.css
@@ -8483,8 +8483,9 @@ th.hide-for-touch {
   height: 300px;
   background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0.5) 59%, rgba(0, 0, 0, 0.5) 100%), url("/images/constr.jpg") no-repeat center center;
   background: linear-gradient(to bottom, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0.5) 59%, rgba(0, 0, 0, 0.5) 100%), url("/images/constr.jpg") no-repeat center center;
-  background-size: cover; }
-  /* line 244, stdin */
+  background-size: cover;
+  background-position: center bottom; }
+  /* line 245, stdin */
   .out-of-grid img {
     position: absolute;
     width: 20rem;
@@ -8492,7 +8493,7 @@ th.hide-for-touch {
     bottom: 0;
     right: 0;
     left: 0; }
-  /* line 253, stdin */
+  /* line 254, stdin */
   .out-of-grid #home-heading h1 {
     position: absolute;
     bottom: 0;
@@ -8505,7 +8506,7 @@ th.hide-for-touch {
     .out-of-grid {
       height: 600px; } }
 
-/* line 267, stdin */
+/* line 268, stdin */
 .content-wrap {
   margin: 0 auto;
   max-width: 62.5rem;
@@ -8521,7 +8522,7 @@ th.hide-for-touch {
   .content-wrap:after {
     clear: both; }
 
-/* line 274, stdin */
+/* line 275, stdin */
 .overlay-content {
   padding-left: 0.9375rem;
   padding-right: 0.9375rem;
@@ -8529,32 +8530,32 @@ th.hide-for-touch {
   float: left;
   -webkit-transform: translateY(-50%);
           transform: translateY(-50%); }
-  /* line 276, stdin */
+  /* line 277, stdin */
   .overlay-content h1 {
     color: #FFFFFF;
     font-weight: bold;
     text-align: center; }
 
-/* line 286, stdin */
+/* line 287, stdin */
 h1 {
   text-align: center;
   text-transform: uppercase;
   color: #FFFFFF; }
 
-/* line 292, stdin */
+/* line 293, stdin */
 p {
   text-align: center; }
 
-/* line 296, stdin */
+/* line 297, stdin */
 section.brown-info {
   margin: 0;
   width: 100%;
   background-color: #563f2d; }
-  /* line 300, stdin */
+  /* line 301, stdin */
   section.brown-info h1, section.brown-info p {
     color: #FFFFFF; }
 
-/* line 305, stdin */
+/* line 306, stdin */
 .home-info {
   margin: 0 auto;
   max-width: 62.5rem;
@@ -8566,18 +8567,18 @@ section.brown-info {
   /* line 240, /Volumes/LaCie2/dev/logan-patrone/bower_components/foundation/scss/foundation/components/_global.scss */
   .home-info:after {
     clear: both; }
-  /* line 307, stdin */
+  /* line 308, stdin */
   .home-info p {
     margin-top: 2rem;
     margin-bottom: 2rem; }
-  /* line 311, stdin */
+  /* line 312, stdin */
   .home-info #home-content {
     padding-left: 0.9375rem;
     padding-right: 0.9375rem;
     width: 100%;
     float: left; }
     @media only screen and (min-width: 64.063em) {
-      /* line 311, stdin */
+      /* line 312, stdin */
       .home-info #home-content {
         display: block;
         padding-left: 0.9375rem;
@@ -8588,7 +8589,7 @@ section.brown-info {
         margin-right: auto;
         float: none; } }
 
-/* line 320, stdin */
+/* line 321, stdin */
 section.white-info {
   margin: 0;
   width: 100%;
@@ -8596,13 +8597,13 @@ section.white-info {
   position: relative;
   min-height: 600px;
   padding-top: 2rem; }
-  /* line 327, stdin */
+  /* line 328, stdin */
   section.white-info h1 {
     font-size: 1.5rem; }
-  /* line 330, stdin */
+  /* line 331, stdin */
   section.white-info h1, section.white-info p {
     color: #222222; }
-  /* line 333, stdin */
+  /* line 334, stdin */
   section.white-info .gray-block {
     position: absolute;
     top: 60%;
@@ -8612,11 +8613,11 @@ section.white-info {
     background-color: #a0a8a0;
     display: none; }
     @media only screen and (min-width: 64.063em) {
-      /* line 333, stdin */
+      /* line 334, stdin */
       section.white-info .gray-block {
         display: block; } }
 
-/* line 347, stdin */
+/* line 348, stdin */
 #att-info {
   margin: 0 auto;
   max-width: 62.5rem;
@@ -8629,14 +8630,14 @@ section.white-info {
   #att-info:after {
     clear: both; }
 
-/* line 351, stdin */
+/* line 352, stdin */
 #att-info-inner {
   padding-left: 0.9375rem;
   padding-right: 0.9375rem;
   width: 100%;
   float: left; }
   @media only screen and (min-width: 64.063em) {
-    /* line 351, stdin */
+    /* line 352, stdin */
     #att-info-inner {
       display: block;
       padding-left: 0.9375rem;
@@ -8647,7 +8648,7 @@ section.white-info {
       margin-right: auto;
       float: none; } }
 
-/* line 359, stdin */
+/* line 360, stdin */
 #info-blocks {
   margin: 0 auto;
   max-width: 62.5rem;
@@ -8661,7 +8662,7 @@ section.white-info {
   #info-blocks:after {
     clear: both; }
 
-/* line 364, stdin */
+/* line 365, stdin */
 .info-block {
   padding-left: 0.9375rem;
   padding-right: 0.9375rem;
@@ -8670,13 +8671,13 @@ section.white-info {
   text-align: center;
   background: #FFFFFF; }
   @media only screen and (min-width: 64.063em) {
-    /* line 364, stdin */
+    /* line 365, stdin */
     .info-block {
       padding-left: 0.9375rem;
       padding-right: 0.9375rem;
       width: 33.33333%;
       float: left; } }
-  /* line 371, stdin */
+  /* line 372, stdin */
   .info-block .inner {
     position: relative;
     background-color: #FFFFFF;
@@ -8686,29 +8687,29 @@ section.white-info {
     border-radius: 10px;
     -webkit-transition: height .5s ease-in-out;
             transition: height .5s ease-in-out; }
-    /* line 379, stdin */
+    /* line 380, stdin */
     .info-block .inner:hover {
       height: 350px; }
-      /* line 381, stdin */
+      /* line 382, stdin */
       .info-block .inner:hover .showme {
         visibility: visible;
         opacity: 1;
         -webkit-transition: visibility 0s, opacity .5s linear;
                 transition: visibility 0s, opacity .5s linear; }
 
-/* line 390, stdin */
+/* line 391, stdin */
 .showme {
   visibility: hidden;
   opacity: 0;
   -webkit-transition: visibility 0s, opacity .5s linear;
           transition: visibility 0s, opacity .5s linear; }
 
-/* line 396, stdin */
+/* line 397, stdin */
 #practice {
   background: url("/images/wood.jpg");
   background-size: cover; }
 
-/* line 401, stdin */
+/* line 402, stdin */
 #practice-contain {
   margin: 0 auto;
   max-width: 62.5rem;
@@ -8722,7 +8723,7 @@ section.white-info {
   /* line 240, /Volumes/LaCie2/dev/logan-patrone/bower_components/foundation/scss/foundation/components/_global.scss */
   #practice-contain:after {
     clear: both; }
-  /* line 405, stdin */
+  /* line 406, stdin */
   #practice-contain #description {
     padding-left: 0.9375rem;
     padding-right: 0.9375rem;
@@ -8730,32 +8731,32 @@ section.white-info {
     float: left;
     padding: 2rem;
     background: #FFFFFF; }
-    /* line 409, stdin */
+    /* line 410, stdin */
     #practice-contain #description h1, #practice-contain #description h2, #practice-contain #description h3, #practice-contain #description h4 {
       color: #222222; }
-    /* line 412, stdin */
+    /* line 413, stdin */
     #practice-contain #description p {
       color: #222222;
       text-align: left; }
-    /* line 416, stdin */
+    /* line 417, stdin */
     #practice-contain #description ul {
       color: #a0a8a0;
       list-style: none; }
     @media only screen and (min-width: 64.063em) {
-      /* line 405, stdin */
+      /* line 406, stdin */
       #practice-contain #description {
         padding-left: 0.9375rem;
         padding-right: 0.9375rem;
         width: 58.33333%;
         float: left;
         padding: 2rem; } }
-  /* line 425, stdin */
+  /* line 426, stdin */
   #practice-contain #pretty {
     display: none;
     background: url("/images/image4.jpg");
     background-size: cover; }
     @media only screen and (min-width: 64.063em) {
-      /* line 425, stdin */
+      /* line 426, stdin */
       #practice-contain #pretty {
         display: block;
         padding-left: 0.9375rem;
@@ -8766,12 +8767,12 @@ section.white-info {
 /*
    FOOTER SECTION
    ========================================================================== */
-/* line 441, stdin */
+/* line 442, stdin */
 input[type=text], textarea {
   color: #a0a8a0;
   border-radius: 10px; }
 
-/* line 446, stdin */
+/* line 447, stdin */
 input::-webkit-input-placeholder {
   color: #a0a8a0; }
 input::-moz-placeholder {
@@ -8781,7 +8782,7 @@ input:-ms-input-placeholder {
 input::placeholder {
   color: #a0a8a0; }
 
-/* line 450, stdin */
+/* line 451, stdin */
 textarea::-webkit-input-placeholder {
   color: #a0a8a0; }
 textarea::-moz-placeholder {
@@ -8791,11 +8792,11 @@ textarea:-ms-input-placeholder {
 textarea::placeholder {
   color: #a0a8a0; }
 
-/* line 454, stdin */
+/* line 455, stdin */
 textarea {
   min-height: 10rem; }
 
-/* line 458, stdin */
+/* line 459, stdin */
 button#submit-button {
   padding: 0;
   margin: 0;
@@ -8804,25 +8805,25 @@ button#submit-button {
   background-color: #a0a8a0;
   border-radius: 50%;
   font-size: 1.5rem; }
-  /* line 466, stdin */
+  /* line 467, stdin */
   button#submit-button:hover {
     background-color: #768076; }
 
-/* line 471, stdin */
+/* line 472, stdin */
 .footer-section {
   background: #563f2d;
   min-height: 100px; }
-  /* line 474, stdin */
+  /* line 475, stdin */
   .footer-section p {
     color: #a0a8a0;
     margin-top: 2rem; }
-  /* line 478, stdin */
+  /* line 479, stdin */
   .footer-section h1 {
     color: #a0a8a0;
     font-size: 1.5rem;
     margin-bottom: 2rem; }
 
-/* line 485, stdin */
+/* line 486, stdin */
 section#contact {
   margin: 0;
   max-width: 62.5rem;
@@ -8838,7 +8839,7 @@ section#contact {
   section#contact:after {
     clear: both; }
 
-/* line 492, stdin */
+/* line 493, stdin */
 #map-contain {
   padding-left: 0.9375rem;
   padding-right: 0.9375rem;
@@ -8850,7 +8851,7 @@ section#contact {
   width: 100%;
   height: 25rem; }
 
-/* line 501, stdin */
+/* line 502, stdin */
 #map-contain iframe {
   position: absolute;
   top: 0;
@@ -8858,7 +8859,7 @@ section#contact {
   width: 100% !important;
   height: 100% !important; }
 
-/* line 509, stdin */
+/* line 510, stdin */
 #contact-contain {
   margin: 0 auto;
   max-width: 62.5rem;
@@ -8871,7 +8872,7 @@ section#contact {
   /* line 240, /Volumes/LaCie2/dev/logan-patrone/bower_components/foundation/scss/foundation/components/_global.scss */
   #contact-contain:after {
     clear: both; }
-  /* line 512, stdin */
+  /* line 513, stdin */
   #contact-contain .contact-form {
     padding-left: 0.9375rem;
     padding-right: 0.9375rem;
@@ -8882,7 +8883,7 @@ section#contact {
     float: none;
     text-align: center; }
     @media only screen and (min-width: 64.063em) {
-      /* line 512, stdin */
+      /* line 513, stdin */
       #contact-contain .contact-form {
         display: block;
         padding-left: 0.9375rem;
@@ -8893,7 +8894,7 @@ section#contact {
         margin-right: auto;
         float: none; } }
 
-/* line 522, stdin */
+/* line 523, stdin */
 #lp-info-contain {
   margin: 0 auto;
   max-width: 62.5rem;
@@ -8905,7 +8906,7 @@ section#contact {
   /* line 240, /Volumes/LaCie2/dev/logan-patrone/bower_components/foundation/scss/foundation/components/_global.scss */
   #lp-info-contain:after {
     clear: both; }
-  /* line 524, stdin */
+  /* line 525, stdin */
   #lp-info-contain #lp-info {
     padding-left: 0.9375rem;
     padding-right: 0.9375rem;
@@ -8915,7 +8916,7 @@ section#contact {
     margin-right: auto;
     float: none; }
     @media only screen and (min-width: 64.063em) {
-      /* line 524, stdin */
+      /* line 525, stdin */
       #lp-info-contain #lp-info {
         display: block;
         padding-left: 0.9375rem;
