--- a/app.css
+++ b/app.css
@@ -8895,6 +8895,14 @@ section#contact {
         float: none; } }
 
 /* line 523, stdin */
+#contact-success {
+  background-color: #563f2d;
+  border: none; }
+  /* line 526, stdin */
+  #contact-success h2 {
+    text-align: center; }
+
+/* line 531, stdin */
 #lp-info-contain {
   margin: 0 auto;
   max-width: 62.5rem;
@@ -8906,7 +8914,7 @@ section#contact {
   /* line 240, /Volumes/LaCie2/dev/logan-patrone/bower_components/foundation/scss/foundation/components/_global.scss */
   #lp-info-contain:after {
     clear: both; }
-  /* line 525, stdin */
+  /* line 533, stdin */
   #lp-info-contain #lp-info {
     padding-left: 0.9375rem;
     padding-right: 0.9375rem;
@@ -8916,7 +8924,7 @@ section#contact {
     margin-right: auto;
     float: none; }
     @media only screen and (min-width: 64.063em) {
-      /* line 525, stdin */
+      /* line 533, stdin */
       #lp-info-contain #lp-info {
         display: block;
         padding-left: 0.9375rem;
